Porting to 1.18.1